# JCut

./: .gitignore  .gitmodules  AGENTS.md  AI_INTEGRATION.md  ARCHITECTURE.md  AUDIO_PREVIEW_AND_DYNAMICS.md  BIREFNET.md  CMakeLists.txt  CTestTestfile.cmake  DATAFLOW.md  DEBUG.md  DIRECT_VULKAN_PREVIEW_BREAKDOWN_PLAN.md  DartConfiguration.tcl  ENDPOINT_TESTING_SUMMARY.md  FACE_TRACKING_FLOW.md  FEATURES.md  FILES.md  FILESIZE_REDUCTION_STRATEGY.md  IMGUI_PLAN.md  INTEGRATION_NOTES.txt  MASKS.md  Makefile  OPENGL_DEPRECATION_AND_REMOVAL_PLAN.md  OPTIMIZE.md  OWNERSHIPMATRIX.md  PREVIEW_RENDER_PIPELINE.md  PROBLEMS.md  PROFESSIONALIZE.md  PROFESSIONAL_ARCHITECTURE.md  PROGRESSIVE_EDGE_STRETCH.md  QT_DEPRECATION_PLAN.md  README.md  REFACTOR_PLAN.md  REFACTOR_PROMPT.md  REMAINING_WORK.md  SPEAKER_FLOW.md  SPEAKER_FLOW_DEBUG_ARTEFACTS_AND_PIPELINE.md  STARTUP_SEQUENCE.md  TABS.md  THIRD_PARTY_NOTICES.md  (+642 more)
.github/workflows/: ci.yml  release.yml
.qt/: QtDeploySupport.cmake
artifacts/include_audit/: README.md  generated_at.txt
artifacts/include_audit/compiler/: direct_vulkan_preview_window.cpp.cmd.txt  direct_vulkan_preview_window.cpp.includes.txt  editor.cpp.cmd.txt  editor.cpp.includes.txt  offscreen_vulkan_renderer_backend.cpp.cmd.txt  offscreen_vulkan_renderer_backend.cpp.includes.txt  speakers_tab.cpp.cmd.txt  speakers_tab.cpp.includes.txt
artifacts/include_audit/compiler_smoke/: render_vulkan_shared.cpp.cmd.txt  render_vulkan_shared.cpp.includes.txt
artifacts/include_audit/data/: fan_in_top.tsv
artifacts/include_audit/graphs/: include_graph.dot  top_fan_in_graph.dot
artifacts/include_audit/reports/: fan_in_top.md  watched_header_reach.md
assets/models/: res10_300x300_ssd_ncnn.param  res10_deploy_ncnn.prototxt
backup_preview/: preview.h  preview_debug.cpp  preview_window_core.cpp  preview_window_gl.cpp  preview_window_interaction.cpp  preview_window_overlay.cpp  preview_window_pipeline.cpp
birefnet/: Dockerfile  requirements.txt
core/: geometry.h  image_buffer.h  offscreen_vulkan_frame.h
diagnostics/phase0/: DIAGNOSIS.md  ENVIRONMENT.md  TEST_BASELINE.md  idle_audio.json  idle_pipeline.json  jcut_idle_mainthread_sample.txt  play_t20_audio.json  play_t20_pipeline.json  play_t30_audio.json  play_t30_pipeline.json  play_t6_audio.json  play_t6_pipeline.json  playhead_end.json  sync_probe.err
diagnostics/phase1/: VISIBLE_PATH_AUDIT.md
diagnostics/phase2/: FIXES.md
diagnostics/phase3/: VERIFICATION.md
diagnostics/phase4/: CI_FIX.md
docs/: NCNN_FORK.md
docs/diagrams/: inspector-tabs.mmd  playback-data-flow.mmd  system-architecture.mmd
legacy/: docker_face_detector.py  speaker_boxstream.dockerfile  speaker_face_candidates.py  speaker_facestream.py  vulkan_boxstream_offscreen_main.cpp  vulkan_boxstream_preview_main.cpp
legacy/face_detectors/: vulkan_res10_ncnn_face_detector.cpp  vulkan_res10_ncnn_face_detector.h
packaging/linux/: AppRun  io.github.jcut.JCut.desktop
plans/: playback-preview-fix-plan.md  playback-preview-redesign.md  playback-preview-root-cause-analysis.md
projects/default/: state.json
projects/testbench/: state.json
scripts/: bootstrap_qt_linux.sh  capture_callstacks.sh  ci_forbidden_patterns.sh  generate_include_trees.py  generate_release_metadata.py  migrate_facedetections_artifacts.sh  package_linux.sh  scan_redundant_code.sh  vulkan_headless_export_compare.sh  vulkan_parity_throughput.sh  vulkan_parity_throughput_headless.sh
shaders/vulkan/: audio_spectrogram_history_normalize.comp  audio_spectrum_fft.comp  audio_spectrum_fft_tile.comp  audio_spectrum_goertzel.comp  audio_spectrum_goertzel_tile.comp  audio_spectrum_history.comp  audio_spectrum_loiacono.comp  audio_spectrum_loiacono_tile.comp  audio_spectrum_normalize.comp  audio_spectrum_tile_normalize.comp  audio_waveform.frag  audio_waveform.vert  audio_waveform_process.comp  effects.frag  effects.vert  face_infer_heuristic.comp  face_preprocess.comp  mask.frag  mask.vert  mask_blur.comp  mask_morph.comp  mask_prepare.comp  nv12.vert  nv12_buffer_to_rgba.comp  nv12_uv.frag  nv12_y.frag  progressive_composite_boundary_merge.comp  progressive_composite_boundary_tiles.comp  progressive_composite_stretch.frag  progressive_composite_stretch.vert  scrfd_preprocess.comp  text.frag  text.vert  title_mesh.frag  title_mesh.vert  yuv420p.comp  yuv420p_u.frag  yuv420p_v.frag
tests/: CMakeLists.txt  README.md  ai_integration_smoke.sh  assert_archive_excludes_vulkan_export_stub.cmake  assert_contiguous_sections_avatar_column.cmake  assert_contiguous_transcript_sections_state_persistence.cmake  assert_export_audio_uses_rubberband.cmake  assert_export_speaker_labels_in_vulkan_path.cmake  assert_render_status_reports_live_progress.cmake  assert_speaker_sections_tab_mode_sync.cmake  check_imgui_binary_no_qt.py  check_imgui_cmake_qt_boundary.py  facedetections_midpoint_detection_harness.cpp  facedetections_track_coverage_harness.cpp  facestream_track_coverage_harness.cpp  live_playback_lag_probe.py  live_playback_sync_probe.py  mask_sidecar_test_utils.h  progressive_edge_stretch_checkerboard.py  rest_smoke_test.py  test_ai_gateway_core.cpp  test_async_decoder.cpp  test_audio_mix_policy.cpp  test_audio_time_stretch.cpp  test_audio_time_stretch_cache.cpp  test_auto_sync_plan.cpp  test_control_server_media_diag.cpp  test_direct_vulkan_handoff_pipeline_contract.cpp  test_editor_runtime.cpp  test_editor_runtime_vulkan_export_backend.cpp  test_effect_presets.cpp  test_explorer_pane.cpp  test_facedetections_artifacts.cpp  test_facedetections_assignment.cpp  test_facedetections_flow.cpp  test_facedetections_preview_smoke.cpp  test_facedetections_processed_artifact.cpp  test_facedetections_time_mapping.cpp  test_facedetections_tracking.cpp  test_facefind_window.cpp  (+49 more)
